full login + swagger
