# routes/api.php
@@ -1,0 +1,13 @@
+<?php
+
+use App\Http\Controllers\LoginController;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Route;
+
+Route::get('/user', function (Request $request) {
+    return $request->user();
+})->middleware('auth:sanctum');
+Route::post('login', LoginController::class)->middleware('guest:sanctum');
+Route::middleware('auth:sanctum')->get('/user', [LoginController::class, 'getUser']);
+Route::post('register', [LoginController::class, 'register'])->middleware('guest:sanctum');
+
